tests/vendor/valid/simple/return_var.c
//expect 2
//tags: simple
int main() {
    int a = 2;
    return a;
}