tests/vendor/invalid/semantics/undeclared_bitwise_op.c
//tags: simple, undeclared
int main(){
    return a >> 2;
}